samples/_failures_safe/1761394092_2b52ac_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ff2ebcd9.c: In function ‘main’:
./samples/SAFE/__tmp_ff2ebcd9.c:167:47: error: ‘decomp’ undeclared (first use in this function)
  167 |     printf("Decompressed data (%zu bytes): ", decomp
      |                                               ^~~~~~
./samples/SAFE/__tmp_ff2ebcd9.c:167:47: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_ff2ebcd9.c:167:53: error: expected ‘)’ at end of input
  167 |     printf("Decompressed data (%zu bytes): ", decomp
      |           ~                                         ^
      |                                                     )
./samples/SAFE/__tmp_ff2ebcd9.c:167:5: error: expected declaration or statement at end of input
  167 |     printf("Decompressed data (%zu bytes): ", decomp
      |     ^~~~~~
